@@ -72,6 +72,7 @@ Version 1.5.0+svn:
    * fixed threading bug in upload_logs
    * dissallow_observers is on as default if side has controller=null
    * Fixed null-pointer reference in network code
+   * Made networking code check system buffer size and limit send length
    * Added possibility to use per fight EV statistics proposed by maboul
    * Added smoother FPS limit to server
    * Fixed a mememory leak in networking code
